--- a/src/app/modules/entries/entries.component.scss
+++ b/src/app/modules/entries/entries.component.scss
@@ -412,7 +412,7 @@
       border: 1px solid $pia-red;
       &:hover {
         background: $pia-red;
-        i,
+        .ng-fa-icon,
         div {
           color: #fff;
         }
